# Demcon-LCA

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  aarch64-toolchain.cmake
.github/workflows/: buildtest.yml  clang-format.yml
src/: io.cpp  io.h  lca.cpp  lca.h  main.cpp
tests/: CMakeLists.txt  bench-cells  bench-gens  run_tests.sh
tests/input/: exampleA  exampleB  exampleU  newline  tabs  wrong
tests/output/: exampleB  exampleU  tabs  wrong
